# cs231n

./: CMakeLists.txt  README
cmake/: compiler.cmake
cs231n/test/: CMakeLists.txt  file_test.cpp  main.cpp  read_data_set_test.cpp
cs231n/util/: CMakeLists.txt  file.cpp  file.hpp
cs231n/util/test/: file_test.cpp
examples/: CMakeLists.txt
examples/knn/: CMakeLists.txt  knn_example.cpp
