FILE(GLOB UTIL_SRCS ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
ADD_LIBRARY(cs231n_util ${UTIL_SRCS})

INSTALL(TARGETS cs231n_util DESTINATION lib)
FILE(GLOB UTIL_HEADERS ${CMAKE_CURRENT_LIST_DIR}/*.hpp)
INSTALL(FILES ${UTIL_HEADERS} DESTINATION include/cs231n/util)

SET(test_progs file_test)

FOREACH(test_prog ${test_progs})
  ADD_EXECUTABLE(${test_prog} ${CMAKE_CURRENT_LIST_DIR}/test/${test_prog}.cpp)
  TARGET_LINK_LIBRARIES(${test_prog} PRIVATE gtest)
  TARGET_LINK_LIBRARIES(${test_prog} PRIVATE gmock)
  TARGET_LINK_LIBRARIES(${test_prog} PRIVATE cs231n_util)
  ADD_TEST(NAME ${test_prog} COMMAND ${test_prog})
ENDFOREACH()
ADD_CUSTOM_TARGET(check ALL COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure -C $<CONFIGURATION> DEPENDS ${test_progs})
